# sniffer_project

./: CMakeLists.txt  README.md  main.cpp
src/core/: CaptureManager.cpp  CaptureManager.h  CaptureWorker.cpp  CaptureWorker.h  IpReassembler.cpp  IpReassembler.h  Packet.h  PacketParser.cpp  PacketParser.h  ProtocolHeaders.h
src/ui/: MainWindow.cpp  MainWindow.h  PacketDetailDialog.cpp  PacketDetailDialog.h
